--- a/mywebpage.html
+++ b/mywebpage.html
@@ -10,6 +10,9 @@
     <style>
         mark {background-color: rgb(197, 98, 164); color: rgb(240, 230, 230);}
     </style>
+     <a href="./img/images.jpg" target="_blank">
+        <img src="./img/images.jpg" alt="Türkiye" width="300" height="150">
+    </a>
     
     <h1 style="color: blueviolet;font-size: 45px ;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; ">Biodiversity</h1>
     
@@ -24,8 +27,9 @@
             The number of animal species in the whole of <mark>Europe</mark> is around 60,000, 
             while in Turkey there are over 80,000 animal species (over 100,000 counting the subspecies).
     </p>
-
-    <img src="c:\Users\Administrator\Downloads\download.jpg" alt="Sumela Monastery" width="250" height="100">
+    <a href="img/download.jpg" target="_blank">
+        <img src="img/download.jpg" alt="Sumela Monastry" width="300" height="150">
+    </a>
 
     <hr style="height:25px;border-width:0; background-color:rgb(16, 180, 84)">
 
@@ -65,7 +69,9 @@
     <h2 style="background-color: blue; color: bisque; font-size: 40px; font-family: inherit;">Climate</h2>
 
     <p style="background-color: rgb(88, 236, 69); color: darkblue; font-size: 18px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">
-        <img src="c:\Users\Administrator\Downloads\Koppen-Geiger_Map_TUR_present.svg.png" alt="Climate Of Türkiye" style="text-align: justify;font-size: 24px;background-color: rgb(2, 54, 37); color: chartreuse; width: 200px; height: 100px;" >
+        <a href="img/Koppen-Geiger_Map_TUR_present.svg.png" target="_blank">
+            <img src="img/Koppen-Geiger_Map_TUR_present.svg.png" alt="Climate" width="300" height="150">
+        </a>
         The coastal areas of Turkey bordering the Aegean and Mediterranean Seas have a temperate Mediterranean climate, with hot, 
         dry summers and mild to cool, wet winters. The coastal areas bordering the Black Sea have a temperate oceanic climate with warm, 
         wet summers and cool to cold, wet winters. 
