--- a/homework/test.html
+++ b/homework/test.html
@@ -7,7 +7,7 @@
         <h1>Registration Form</h1>
         <style>
             h1{text-align: center;}
-            fieldset{width: 500px;}
+            fieldset{width: 500px; padding: 15px;}
             form{background-color:rgb(245, 204, 175); box-shadow: 3px 3px 3px black;}
         </style>
         <center>
